# ENVable

./: .env.example  .gitignore  CHANGELOG.md  DEPENDENCIES.md  Dockerfile  ENVThing_Value_Proposition.md  Makefile  OSS_Project_Roadmap.md  README.md  auto_sync.py  docker-compose.yml  github_secrets_manager.py  pyproject.toml  requirements.txt  sync_config.json
OpenAPI/: QUICKSTART.md  README.md  __init__.py  requirements.txt
OpenAPI/components/: credentials.yaml  monitoring.yaml  notifications.yaml  services.yaml
OpenAPI/schemas/: api-spec.yaml
OpenAPI/tools/: __init__.py  generator.py  validator.py
OpenAPI/validators/: __init__.py  enum_checker.py  schema_validator.py
Runaway_Monitor/: .env.example  README.md  __init__.py  monitor.py  requirements.txt  test_monitor.py
Runaway_Monitor/config/: __init__.py  monitor_config.example.json
Runaway_Monitor/detectors/: __init__.py  api_detector.py
Runaway_Monitor/notifications/: __init__.py  telegram_notifier.py
key_rotation/: README.md  rotation_config.json  rotation_scheduler.py
key_rotation/provider_rotators/: __init__.py
src/: __init__.py  agent.py  auto_sync.py  config.py  env_processor.py
tests/: __init__.py  test_imports.py
